# world-simulator

./: README.md  ideas.md  todo.md
active-passive-elector-ts/: package.json  todo.md  (+1 more)
distribute-zone-simulation/: CMakeLists.txt  README.md  todo.md
distribute-zone-simulation/scripts/: build.sh  run.sh
distribute-zone-simulation/source/: Role.h  configuration.h  main.c
distribute-zone-simulation/source/Client/: Client.h  init_next_client.h
distribute-zone-simulation/source/Program_Database/: Program_Database.h  init.c
distribute-zone-simulation/source/messages/: Message_Header.h  message_types.h
distribute-zone-simulation/source/messages/Set_Lease_Info_Message/: deserialize.h  serialize.c  serialize.h
distribute-zone-simulation/source/messages/Set_Role_Message/: Set_Role_Message.h  deserialize.h  serialize.c
zone-manager/: CMakeLists.txt  Makefile  todo.md
zone-manager/active-passive-elector/: CMakeLists.txt
zone-manager/active-passive-elector/built/: CMakeCache.txt  Makefile  active-passive-elector  cmake_install.cmake
zone-manager/active-passive-elector/scripts/: build.sh
zone-manager/active-passive-elector/source/: main.c
zone-manager/active-passive-elector/source/Process_Control/: Process_Control.h  init.c
zone-manager/active-passive-elector/source/Role/: Role.h
zone-manager/active-passive-elector/source/TCP_Connection/: TCP_Connection.h  init.c  init.h
zone-manager/active-passive-elector/source/TCP_Server/: TCP_Server.h  accept_clients.c  accept_clients.h  buffer_data_from_clients.h  init.c
zone-manager/active-passive-elector/source/messages/: Message_Header.h  message_types.h
zone-manager/client/: CMakeLists.txt  client-main  client-main.c
zone-manager/client/built/: CMakeCache.txt  Makefile  client  cmake_install.cmake
zone-manager/client/model/: tcp-client.h
zone-manager/client/scripts/: build.sh
zone-manager/client/source/: main.c
zone-manager/scripts/: build.sh  run.sh
zone-manager/server/: server-main  server-main.c
zone-manager/server/model/: tcp-server.h
zone-manager/src/: k8s-main.txt  main  main.c
zone-manager/src/init/: initialize_k8s_core_api_client.c  initialize_k8s_core_api_client.h
zone-manager/src/lease/: renew_active_lease.c  renew_active_lease.h
zone-manager/src/role/: role.h
zone-manager/test/: CMakeLists.txt  main  main.c
(+154 files in other folders)
